--- a/controller/config/webhook/manifests.yaml
+++ b/controller/config/webhook/manifests.yaml
@@ -101,6 +101,24 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
+      path: /mutate-core-kalm-dev-v1alpha1-rolebinding
+  failurePolicy: Fail
+  name: mrolebinding.kb.io
+  rules:
+  - apiGroups:
+    - core.kalm.dev
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - rolebindings
+- clientConfig:
+    caBundle: Cg==
+    service:
+      name: webhook-service
+      namespace: system
       path: /mutate-core-kalm-dev-v1alpha1-singlesignonconfig
   failurePolicy: Fail
   name: msinglesignonconfig.kb.io
@@ -284,6 +302,24 @@ webhooks:
     - UPDATE
     resources:
     - protectedendpointtypes
+- clientConfig:
+    caBundle: Cg==
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-core-kalm-dev-v1alpha1-rolebinding
+  failurePolicy: Fail
+  name: vrolebinding.kb.io
+  rules:
+  - apiGroups:
+    - core.kalm.dev
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - rolebindings
 - clientConfig:
     caBundle: Cg==
     service:
