--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,6 @@
     "@types/react-redux": "^7.1.6",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-syntax-highlighter": "^11.0.4",
-    "@types/redux-form": "^8.2.3",
     "@types/redux-immutable": "^4.0.1",
     "@types/redux-logger": "^3.0.8",
     "@types/storybook__addon-actions": "^5.2.1",
@@ -64,7 +63,6 @@
     "react-syntax-highlighter": "^12.2.1",
     "react-table": "^7.5.0",
     "reconnecting-websocket": "^4.4.0",
-    "redux-form": "^8.2.6",
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -87,8 +85,16 @@
     "build-storybook": "NODE_ENV=test build-storybook --docs -s public"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "jest": {
     "moduleNameMapper": {
@@ -120,7 +126,6 @@
     "husky": "^4.2.5",
     "prettier": "^2.0.5",
     "react-docgen-typescript-loader": "^3.7.2",
-    "redux-form-storybook": "^1.0.2",
     "storybook-addon-deps": "^2.0.1",
     "ts-loader": "^7.0.5",
     "webpack-bundle-analyzer": "^3.8.0"
