minor changes for disk

--- a/controller/config/crd/bases/core.kalm.dev_components.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_components.yaml
@@ -530,6 +530,8 @@ spec:
             volumes:
               items:
                 properties:
+                  hostPath:
+                    type: string
                   path:
                     description: the path we use to mount this volume to container
                     type: string
@@ -556,7 +558,7 @@ spec:
                     - emptyDir
                     - pvc
                     - pvcTemplate
-                    - hostpath
+                    - hostPath
                     type: string
                 required:
                 - path
