--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
     "redux-thunk": "^2.3.0",
     "redux-thunk-error-handler": "^1.1.4",
     "typescript": "^3.7.4",
+    "use-debounce": "^4.0.0",
     "xterm": "^4.4.0",
     "xterm-addon-fit": "^0.3.0",
     "xterm-addon-search": "^0.5.0",
