--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@types/storybook__react": "^5.2.1",
     "ace-builds": "^1.4.8",
     "axios": "^0.19.2",
+    "casbin": "^5.1.3",
     "chart.js": "^2.9.3",
     "connected-react-router": "^6.8.0",
     "copy-to-clipboard": "^3.3.1",
