--- a/controller/config/default/kustomization.yaml
+++ b/controller/config/default/kustomization.yaml
@@ -15,7 +15,7 @@ namePrefix: kalm-
 bases:
 - ../crd
 - ../rbac
-#- ../manager
+- ../manager
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in crd/kustomization.yaml
 - ../webhook
 # [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER'. 'WEBHOOK' components are required.
