--- a/controller/config/manager/kustomization.yaml
+++ b/controller/config/manager/kustomization.yaml
@@ -1,5 +1,6 @@
 resources:
-- manager.yaml
+#- manager.yaml
+- manager-ns.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
