fix non-get request receive 302 redirect
The reason is that the id_token has expired. After the ext_authz server refreshes the id_token, it needs to update the cookie on the browser side through set-cookie. This led to the return of 302. But this is not acceptable for non-get requests. A new envoyfilter is used to solve this problem. The refresh token process will become transparent and will not affect the original request.

--- a/api/Makefile
+++ b/api/Makefile
@@ -1,7 +1,7 @@
 auth_proxy:
 	KALM_OIDC_CLIENT_ID=$(shell kubectl get secrets -n kalm-system dex-secret --template={{.data.client_id}} | base64 -D) \
 KALM_OIDC_CLIENT_SECRET=$(shell kubectl get secrets -n kalm-system dex-secret --template={{.data.client_secret}} | base64 -D) \
-KALM_OIDC_PROVIDER_URL="$(shell kubectl get httproutes.core.kalm.dev -n kalm-system dex -o jsonpath='http://{.spec.hosts[0]}'):$(shell kubectl get svc -n istio-system istio-ingressgateway -o jsonpath='{.spec.ports[?(@.port==80)].nodePort}')/dex" \
+KALM_OIDC_PROVIDER_URL="$(shell kubectl get httproutes.core.kalm.dev -n kalm-system dex -o jsonpath='http://{.spec.hosts[0]}:80/dex')" \
 KALM_OIDC_AUTH_PROXY_URL="http://$(shell kubectl get serviceentries.networking.istio.io -n kalm-system external-envoy-ext-authz-server -o jsonpath='{.spec.hosts[0]}'):$(shell kubectl get serviceentries.networking.istio.io -n kalm-system external-envoy-ext-authz-server -o jsonpath='{.spec.ports[0].number}')" \
 go run ./cmd/auth-proxy
 
@@ -10,3 +10,5 @@ run:
 
 test:
 	go test ./... -v 
+
+.PHONY: auth_proxy
