add idToken expiry seconds in sso config

--- a/controller/config/crd/bases/core.kalm.dev_singlesignonconfigs.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_singlesignonconfigs.yaml
@@ -78,6 +78,9 @@ spec:
               - port
               - scheme
               type: object
+            idTokenExpirySeconds:
+              format: int32
+              type: integer
             issuer:
               description: These two are for arbitrary oidc provider
               type: string
