--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,3 +1,5 @@
+SKIP_PREFLIGHT_CHECK=true
+
 # https://create-react-app.dev/docs/setting-up-your-editor/#experimental-extending-the-eslint-config
 EXTEND_ESLINT=true
 
