add profile page

--- a/controller/config/samples/core_v1alpha1_tutorial_1_hello-world.yaml
+++ b/controller/config/samples/core_v1alpha1_tutorial_1_hello-world.yaml
@@ -1,6 +1,14 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: kalm-system
+  labels:
+    istio-injection: enabled
+    kalm-enabled: "true"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: kalm-hello-world
   labels:
     istio-injection: enabled
