api set pvc for sts if missing

--- a/controller/config/samples/core_v1alpha1_vol_sts.yaml
+++ b/controller/config/samples/core_v1alpha1_vol_sts.yaml
@@ -18,7 +18,7 @@ spec:
     volumes:
       - path: /data
         size: 1Mi
-        type: pvc
+        type: pvcTemplate
         storageClassName: kalm-standard
         pvc: my-pvc
       - path: /tmp
