--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,6 +239,11 @@ workflows:
               only: /^v.*/
       - hold:
           type: approval # <<< This key-value pair will set your workflow to a status of "On Hold"
+          filters:
+            branches:
+              only: 
+                - ^(?!master$)
+                - ^(?!hotfix-reconcile$)
       - build-push-controller-image:
           name: manual-build-push-controller-image
           context: kalm-ci
