use ignore for branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -202,8 +202,7 @@ workflows:
           type: approval # <<< This key-value pair will set your workflow to a status of "On Hold"
           filters:
             branches:
-              only: 
-                - ^(?!master$)
+              ignore: master
       - build-push-dashboard-image:
           name: manual-build-push-dashboard-image
           context: kalm-ci
@@ -245,8 +244,7 @@ workflows:
           type: approval # <<< This key-value pair will set your workflow to a status of "On Hold"
           filters:
             branches:
-              only: 
-                - ^(?!master$)
+              ignore: master
       - build-push-controller-image:
           name: manual-build-push-controller-image
           context: kalm-ci
@@ -283,8 +281,7 @@ workflows:
           type: approval
           filters:
             branches:
-              only: 
-                - ^(?!master$)
+              ignore: master
       - build-push-operator-image:
           name: manual-build-push-operator-image
           context: kalm-ci
