--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,7 +151,7 @@ jobs:
           KALM_DEPLOY_KEY: $DEPLOY_KEY
           KALM_APP: kalm-system
           KALM_COMPONENT: kalm
-          KALM_COMPONENT_IMG_TAG: latest
+          KALM_COMPONENT_IMG_TAG: $CIRCLE_SHA1
   deploy-auth-proxy:
     executor: deploy-orb/default
     steps:
@@ -160,7 +160,7 @@ jobs:
           KALM_DEPLOY_KEY: $DEPLOY_KEY
           KALM_APP: kalm-system
           KALM_COMPONENT: auth-proxy
-          KALM_COMPONENT_IMG_TAG: latest
+          KALM_COMPONENT_IMG_TAG: $CIRCLE_SHA1
   deploy-controller:
     docker:
       - image: circleci/golang:1.13.11
