FormSpy and FieldArray Disks

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "expression-eval": "^3.1.2",
     "final-form": "^4.20.1",
+    "final-form-arrays": "^3.0.2",
     "flowpoints": "git+https://github.com/iAladdin/flowpoints.js.git#23d517320c12eb7077ba8b5d8fdda3bfc1eeabd4",
     "formik": "^2.1.5",
     "formik-material-ui": "^3.0.0-alpha.0",
@@ -60,6 +61,7 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-final-form": "^6.5.1",
+    "react-final-form-arrays": "^3.1.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.3",
