--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@types/qs": "^6.9.3",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-final-form-listeners": "^1.0.0",
     "@types/react-redux": "^7.1.6",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-syntax-highlighter": "^11.0.4",
@@ -62,6 +63,7 @@
     "react-dom": "^16.12.0",
     "react-final-form": "^6.5.1",
     "react-final-form-arrays": "^3.1.2",
+    "react-final-form-listeners": "^1.0.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.3",
