--- a/controller/config/crd/bases/core.kalm.dev_components.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_components.yaml
@@ -48,7 +48,7 @@ spec:
             Annotations:
               additionalProperties:
                 type: string
-              description: labels will add to pods
+              description: annotations will add to pods
               type: object
             Labels:
               additionalProperties:
@@ -56,14 +56,17 @@ spec:
               description: labels will add to pods
               type: object
             afterStart:
+              description: Deprecated
               items:
                 type: string
               type: array
             beforeDestroy:
+              description: Deprecated
               items:
                 type: string
               type: array
             beforeStart:
+              description: Deprecated
               items:
                 type: string
               type: array
