--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -17,4 +17,7 @@ REACT_APP_DEBUG=true
 
 REACT_APP_NAME=$npm_package_name
 REACT_APP_VERSION=$npm_package_version
-SENTRY_DSN=https://b8806c44a9004c6b96d6ce4c7bf54a2d@o453986.ingest.sentry.io/5443275
+REACT_APP_SENTRY_DSN=https://b8806c44a9004c6b96d6ce4c7bf54a2d@o453986.ingest.sentry.io/5443275
+SENTRY_AUTH_TOKEN=XXXXXXXXXXX
+SENTRY_ORG=kalmtest
+SENTRY_PROJECT=kalmfe
