--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -15,6 +15,7 @@ REACT_APP_USE_MOCK_API=false
 # display some debug info/component; register debug middlewares/plugins
 REACT_APP_DEBUG=true
 
+REACT_APP_ENABLE_SENTRY=true
 REACT_APP_NAME=$npm_package_name
 REACT_APP_VERSION=$npm_package_version
 REACT_APP_SENTRY_DSN=https://b8806c44a9004c6b96d6ce4c7bf54a2d@o453986.ingest.sentry.io/5443275
