add cors in http route

--- a/controller/config/crd/bases/core.kalm.dev_httproutes.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_httproutes.yaml
@@ -90,18 +90,12 @@ spec:
                   items:
                     type: string
                   type: array
-                allowOrigin:
+                allowOrigins:
                   items:
                     type: string
                   type: array
                 maxAgeSeconds:
                   type: integer
-              required:
-              - allowCredentials
-              - allowHeaders
-              - allowMethods
-              - allowOrigin
-              - maxAgeSeconds
               type: object
             delay:
               properties:
