--- a/operator/resources/istiocontrolplane.yaml
+++ b/operator/resources/istiocontrolplane.yaml
@@ -9,6 +9,10 @@ metadata:
   namespace: istio-system
   name: istiocontrolplane
 spec:
+  values:
+    global:
+      proxy:
+        holdApplicationUntilProxyStarts: true
   profile: default
   components:
     pilot:
