enable prometheus in istio

--- a/operator/resources/istiocontrolplane.yaml
+++ b/operator/resources/istiocontrolplane.yaml
@@ -13,6 +13,9 @@ spec:
     global:
       proxy:
         holdApplicationUntilProxyStarts: true
+  addonComponents:
+    prometheus:
+      enabled: true
   profile: default
   components:
     pilot:
