--- a/.github/workflows/build-push-img.yml
+++ b/.github/workflows/build-push-img.yml
@@ -15,6 +15,8 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - 
+        uses: actions/checkout@v2
       -
         name: Cache Docker layers
         uses: actions/cache@v2
