--- a/.github/workflows/build-push-img.yml
+++ b/.github/workflows/build-push-img.yml
@@ -15,8 +15,8 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - 
-        uses: actions/checkout@v2
+      # - 
+      #   uses: actions/checkout@v2
       -
         name: Cache Docker layers
         uses: actions/cache@v2
@@ -42,4 +42,7 @@ jobs:
           cache-to: type=local,dest=~/.npm
       - 
         name: list dir
-        run: ls ~/.npm && ls * && ls */*
+        run: ls -al ~/* 
+      - 
+        name: list dir2  
+        run: ls * && ls */*
