--- a/.github/workflows/build-push-img.yml
+++ b/.github/workflows/build-push-img.yml
@@ -15,15 +15,15 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      # - 
-      #   uses: actions/checkout@v2
+      - 
+        uses: actions/checkout@v2
       -
         name: Cache Docker layers
         uses: actions/cache@v2
         with:
-          path: ~/.npm
-          #key: ${{ runner.os }}-buildx-${{ hashFiles('**/package-lock.json') }}
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ hashFiles('**/package-lock.json') }}
+          #key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
       -
@@ -38,8 +38,8 @@ jobs:
         with:
           push: true
           tags: diveinto/kalm-for-test:latest
-          cache-from: type=local,src=~/.npm
-          cache-to: type=local,dest=~/.npm
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
       - 
         name: list dir
         run: ls -al ~/* 
