--- a/.github/workflows/build-push-img.yml
+++ b/.github/workflows/build-push-img.yml
@@ -15,17 +15,17 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - 
-        uses: actions/checkout@v2
-      -
-        name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ hashFiles('**/package-lock.json') }}
-          #key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+      # - 
+      #   uses: actions/checkout@v2
+      # -
+      #   name: Cache Docker layers
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: /tmp/.buildx-cache
+      #     key: ${{ runner.os }}-buildx-${{ hashFiles('**/package-lock.json') }}
+      #     #key: ${{ runner.os }}-buildx-${{ github.sha }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-buildx-
       -
         name: Login to DockerHub
         uses: docker/login-action@v1 
@@ -38,8 +38,10 @@ jobs:
         with:
           push: true
           tags: diveinto/kalm-for-test:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          cache-from: type=registry,ref=diveinto/kalm-for-test:latest
+          cache-to: type=inline
+          # cache-from: type=local,src=/tmp/.buildx-cache
+          # cache-to: type=local,dest=/tmp/.buildx-cache
       - 
         name: list dir
         run: ls -al ~/* 
