--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
       - run:
           name: Build Docker image
           command: >
-            docker buildx build --cache-from type=registry,ref=diveinto/kalm-for-test:latest --cache-to type=inline,mode=max
+            docker buildx build --cache-from type=registry,ref=kalmhq/kalm:latest --cache-to type=inline,mode=max
             --load
             -t kalmhq/kalm:latest .
       - run:
