--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,32 +34,34 @@ jobs:
           working_directory: ./api
           command: bash <(curl -s https://codecov.io/bash)
   build-push-dashboard-image:
-    docker:
-      - image: circleci/buildpack-deps:stretch
+    machine:
+      image: ubuntu-2004:202008-01
     steps:
       - checkout
-      - setup_remote_docker
       - run:
-          name: Build Docker image
-          command: >
-            docker build
-            --build-arg KALM_BUILD_ENV_GIT_COMMIT=$CIRCLE_SHA1
-            --build-arg KALM_BUILD_ENV_GIT_VERSION=$CIRCLE_TAG
-            -t kalmhq/kalm:latest .
-      - run:
-          name: Publish Docker Image to DOCKER HUB
+          name: Build & Push Docker image
           command: |
-            echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-            docker push kalmhq/kalm:latest
-            docker tag kalmhq/kalm:latest kalmhq/kalm:$CIRCLE_SHA1
-            docker push kalmhq/kalm:$CIRCLE_SHA1
-            TAG=$(git tag --points-at HEAD)
+            export DOCKER_CLI_EXPERIMENTAL=enabled
+            docker buildx create --name mybuilder --use
 
-            if [ "$TAG" != "" ]
-            then
-              docker tag kalmhq/kalm:latest kalmhq/kalm:$TAG
-              docker push kalmhq/kalm:$TAG
-            fi
+            echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+
+            docker buildx build \
+              --output type=registry \
+              --cache-from=type=registry,ref=kalmhq/kalm:cache \
+              --cache-to=type=registry,ref=kalmhq/kalm:cache,mode=max \
+              --build-arg KALM_BUILD_ENV_GIT_COMMIT=$CIRCLE_SHA1 \
+              --build-arg KALM_BUILD_ENV_GIT_VERSION=$CIRCLE_TAG \
+              -t kalmhq/kalm:latest .
+            
+            # docker tag kalmhq/kalm:latest kalmhq/kalm:$CIRCLE_SHA1
+            # docker push kalmhq/kalm:$CIRCLE_SHA1
+            
+            # if [ "$CIRCLE_TAG" != "" ]
+            # then
+            #   docker tag kalmhq/kalm:latest kalmhq/kalm:$CIRCLE_TAG
+            #   docker push kalmhq/kalm:$CIRCLE_TAG
+            # fi
   test-controller:
     docker:
       - image: circleci/golang:1.13.11
