--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,11 +47,10 @@ jobs:
             echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
 
             docker buildx build \
+              --progress auto \
               --output type=registry \
               --cache-from=type=registry,ref=kalmhq/kalm:cache \
               --cache-to=type=registry,ref=kalmhq/kalm:cache,mode=max \
-              --build-arg KALM_BUILD_ENV_GIT_COMMIT=$CIRCLE_SHA1 \
-              --build-arg KALM_BUILD_ENV_GIT_VERSION=$CIRCLE_TAG \
               -t kalmhq/kalm:latest .
             
             # docker tag kalmhq/kalm:latest kalmhq/kalm:$CIRCLE_SHA1
